add pencarian cepat

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="content text-center">
           <div class="heading">
-            <h2>Koleksi</h2>
+            <h2><b>Koleksi</b></h2>
             <div class="border"></div>
             <p>Jelajahi daftar terpilih untuk restoran, kafe, dan bar terbaik di dan di sekitar Bandung, berdasarkan tren </p>
           </div>
@@ -122,7 +122,7 @@
 								</div>
 							</div>
 							<div class="col-md-6 desk">
-								<b style="font-size:16px;">Terpopuler Minggu Ini</b>
+								<b style="font-size:19px;">Terpopuler Minggu Ini</b>
 								<p>Restoran terpopuler di kota minggu ini</p>
 							</div>
 						</div>
@@ -139,7 +139,7 @@
 								</div>
 							</div>
 							<div class="col-md-6 desk">
-								<b style="font-size:16px;">Romantik</b>
+								<b style="font-size:19px;">Romantik</b>
 								<p>Tempat terbaik untuk makan dengan suasana romantis</p>
 							</div>
 						</div>
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 							<div class="col-md-6 desk">
-								<b style="font-size:16px;">Hilltop Restaurants</b>
+								<b style="font-size:19px;">Hilltop Restaurants</b>
 								<p>The best places to enjoy a meal with a beautiful view of the mountain</p>
 							</div>
 						</div>
@@ -173,7 +173,7 @@
                 </div>
               </div>
               <div class="col-md-6 desk">
-                <b style="font-size:16px;">Hilltop Restaurants</b>
+                <b style="font-size:19px;">Authentic Sunda</b>
                 <p>The best places to enjoy a meal with a beautiful view of the mountain</p>
               </div>
             </div>
@@ -190,7 +190,7 @@
                 </div>
               </div>
               <div class="col-md-6 desk">
-                <b style="font-size:16px;">Hilltop Restaurants</b>
+                <b style="font-size:19px;">Kopi Terbaik</b>
                 <p>The best places to enjoy a meal with a beautiful view of the mountain</p>
               </div>
             </div>
@@ -207,7 +207,7 @@
                 </div>
               </div>
               <div class="col-md-6 desk">
-                <b style="font-size:16px;">Hilltop Restaurants</b>
+                <b style="font-size:19px;">Hilltop Restaurants</b>
                 <p>The best places to enjoy a meal with a beautiful view of the mountain</p>
               </div>
             </div>
@@ -223,92 +223,22 @@
             <div class="border"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div id="portfolio">
-                <ul class="filters list-inline">
-                  <li>
-                    <a class="active" data-filter="*" href="#">All</a>
-                  </li>
-                  <li>
-                    <a data-filter=".photography" href="#">Photography</a>
-                  </li>
-                  <li>
-                    <a data-filter=".branding" href="#">Branding</a>
-                  </li>
-                  <li>
-                    <a data-filter=".web" href="#">Web</a>
-                  </li>
-                </ul>
-                <ul class="items list-unstyled clearfix animated hiding" data-animation="fadeInRight">
-                  <li class="item branding">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/1.jpg" alt="">
-                      <div class="overlay">
-                        <span>Etiam porta</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/2.jpg" alt="">
-                      <div class="overlay">
-                        <span>Lorem ipsum</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item branding">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/3.jpg" alt="">
-                      <div class="overlay">
-                        <span>Vivamus quis</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/4.jpg" alt="">
-                      <div class="overlay">
-                        <span>Donec ac tellus</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/5.jpg" alt="">
-                      <div class="overlay">
-                        <span>Etiam volutpat</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item web">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/6.jpg" alt="">
-                      <div class="overlay">
-                        <span>Donec congue </span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item photography">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/7.jpg" alt="">
-                      <div class="overlay">
-                        <span>Nullam a ullamcorper diam</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="item web">
-                    <a href="work.html" data-gall="gall-frame" data-type="ajax">
-                      <img src="img/work/8.jpg" alt="">
-                      <div class="overlay">
-                        <span>Etiam consequat</span>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+        <div class="row">
+          <div class="col-md-12 cepat">
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/sarapan.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Sarapan</p>
+              </a>
+            </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/makansiang.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Makan Siang</p>
+              </a>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </section>
