--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                 <p>Makan Siang</p>
               </a>
             </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/category_10.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Makan Malam</p>
+              </a>
+            </div>
           </div>
         </div>
         </div>
