edit pencarian cepat

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
       <div class="container">
         <div class="content text-center">
           <div class="heading">
-            <h2>This is how we do it.</h2>
+            <h2><b>Pencarian Cepat</b></h2>
             <div class="border"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, alias enim placeat earum quos ab.</p>
+            <p>Temukan restoran berdasarkan tipe masakan </p>
           </div>
         <div class="row">
           <div class="col-md-12 cepat">
@@ -241,6 +241,36 @@
               <a href="#" class="category">
                 <img src="img/pencariancepat/category_10.png" style="height: 48px; width: 48px; display: inline-block;">
                 <p>Makan Malam</p>
+              </a>
+            </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/kafe.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Kafe dan Deli</p>
+              </a>
+            </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/pesanantar.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Restoran Pesan Antar</p>
+              </a>
+            </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/bar.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Bar dan Nightlife</p>
+              </a>
+            </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/dessert.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Dessert & Cakes</p>
+              </a>
+            </div>
+            <div class="col-md-2" id="pencarian">
+              <a href="#" class="category">
+                <img src="img/pencariancepat/foodcourt.png" style="height: 48px; width: 48px; display: inline-block;">
+                <p>Food Court</p>
               </a>
             </div>
           </div>
