add daerah populer

--- a/index.html
+++ b/index.html
@@ -278,6 +278,141 @@
         </div>
       </div>
     </section>
+    <section id="work" class="page">
+      <div class="container">
+        <div class="content text-center">
+          <div class="heading">
+            <h2><b>Daerah populer di dan di sekitar Bandung </b></h2>
+            <div class="border"></div>
+            <p>Jelajahi restoran, bar, dan kafe melalui lokalitas </p>
+          </div>
+        <div class="row">
+          <div class="col-md-12 cepat pop">
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Lengkong
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Dago
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Dago Pakar
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Sukajadi
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+              <a href="#" class="col-md-4 popdar">
+                Riau
+                <span>(102 tempat)</span>
+              </a>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
 	<!-- Javascript List -->
 	   <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
