--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" async defer>
 	<link rel="stylesheet" href="css/merlin.css">
 	<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/modal.css">
 
 
     <section id="home" class="page">
     <div class="hitam">
       <div class="container">
       <div class="login">
-      <a href="#" class=" btn btn-blue">Masuk</a>
+      <a href="#" class="btn btn-blue" data-toggle="modal" data-target="#myModal">Masuk</a>
+
 <a href="#" class="btn btn-blue">Create An Account</a>
       </div>
         <div class="content cover text-center">
@@ -36,7 +38,41 @@
       </div>
     </section>
 
+        <!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
 
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 class="modal-title"><b>Zomato Login!</b></h3>
+      </div>
+      <div class="modal-body">
+            <form accept-charset="UTF-8" role="form">
+              <fieldset>
+                <div class="form-group">
+                <h4><b>Email Zomato</b></h4>
+                  <input class="form-control" placeholder="E-mail" name="email" type="text">
+              </div>
+              <div class="form-group">
+                <h4><b>Password</b></h4>
+                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+              </div>
+              <div class="checkbox">
+                  <label>
+                    <input name="remember" type="checkbox" value="Remember Me"> Remember Me
+                  </label>
+                </div>
+              <input class="btn btn-lg btn-mas btn-block" type="submit" value="Masuk"><br>
+              <p align="center" id="privacy">Dengan melanjutkan laman ini, Anda setuju dengan <a href="#"><u>Syarat dan Ketentuan</u></a>,<a href="#"> <u>Kebijakan Cookie</u></a>, <a href="#"><u>Kebijakan Privasi dan</u></a> <a href="#"><u>Kebijakan Konten</u></a> Zomato. </p>
+            </fieldset>
+              </form>
+      </div>
+    </div>
+
+  </div>
+</div>
     <div id="navbar-top">
       <nav class="navbar navbar-default navbar-static" role="navigation">
         <div class="container">
