--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="login">
       <a href="#" class="btn btn-blue" data-toggle="modal" data-target="#myModal">Masuk</a>
 
-<a href="#" class="btn btn-blue">Create An Account</a>
+<a href="#" class="btn btn-blue" data-toggle="modal" data-target="#myModal2">Create An Account</a>
       </div>
         <div class="content cover text-center">
           <div class="row">
@@ -53,17 +53,52 @@
               <fieldset>
                 <div class="form-group">
                 <h4><b>Email Zomato</b></h4>
-                  <input class="form-control" placeholder="E-mail" name="email" type="text">
+                  <input class="form-control" placeholder="E-mail" name="email" type="text" required>
               </div>
               <div class="form-group">
                 <h4><b>Password</b></h4>
-                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                <input class="form-control" placeholder="Password" name="password" type="password" value="" required>
               </div>
               <div class="checkbox">
                   <label>
                     <input name="remember" type="checkbox" value="Remember Me"> Remember Me
                   </label>
                 </div>
+              <input class="btn btn-lg btn-mas btn-block" type="submit" value="Masuk"><br>
+              <p align="center" id="privacy">Dengan melanjutkan laman ini, Anda setuju dengan <a href="#"><u>Syarat dan Ketentuan</u></a>,<a href="#"> <u>Kebijakan Cookie</u></a>, <a href="#"><u>Kebijakan Privasi dan</u></a> <a href="#"><u>Kebijakan Konten</u></a> Zomato. </p>
+            </fieldset>
+              </form>
+      </div>
+    </div>
+
+  </div>
+</div>
+        <!-- Modal -->
+<div id="myModal2" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 class="modal-title"><b>Zomato Register!</b></h3>
+      </div>
+      <div class="modal-body">
+            <form accept-charset="UTF-8" role="form">
+              <fieldset>
+                <div class="form-group">
+                <h4><b>Nama Lengkap</b></h4>
+                  <input class="form-control" placeholder="Nama Lengkap" name="email" type="text" required>
+              </div>
+              <div class="form-group">
+                <h4><b>Alamat Email</b></h4>
+                <input class="form-control" placeholder="Alamat Email" name="password" type="password" value="" required>
+              </div>
+              <div class="form-group">
+                <h4><b>Password</b></h4>
+                <input class="form-control" placeholder="Password" name="password" type="password" value="" required>
+              </div>
+
               <input class="btn btn-lg btn-mas btn-block" type="submit" value="Masuk"><br>
               <p align="center" id="privacy">Dengan melanjutkan laman ini, Anda setuju dengan <a href="#"><u>Syarat dan Ketentuan</u></a>,<a href="#"> <u>Kebijakan Cookie</u></a>, <a href="#"><u>Kebijakan Privasi dan</u></a> <a href="#"><u>Kebijakan Konten</u></a> Zomato. </p>
             </fieldset>
