--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<!-- CSS List-->
-  <link rel="icon" type="image/png" href="https://b.zmtcdn.com/images/logo/zomato_favicon5.png" />
+  <link rel="icon" type="image/png" href="img/jajanjalanlogo.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" async defer>
     <link rel="stylesheet" href="css/bootstrap.min.css" async defer>
     <link rel="stylesheet" href="css/venobox.css" async defer>
@@ -28,7 +28,7 @@
         <div class="content cover text-center">
           <div class="row">
             <div class="col-lg-12">
-              <img class="logozomato" src="img/zomato_logo.svg" alt=""><br>
+              <img class="logozomato" src="img/jajanjalanlogo.png" alt=""><br>
 
               <h2>Temukan restoran, kafe, dan bar terbaik di Indonesia. </h2>
             </div>
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="flex-shrink-0 plr0i">
-            <button id="search_button" class="btn btn-danger cari" type="submit">Cari
+            <button id="search_button" class="btn btn-cyan cari" type="submit">Cari
           </div>
 
         </form>
